kube/app/devopsapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devsec
spec:
  type: NodePort
  selector:
    app: devopsapp
  ports:
     - port: 8080
       targetPort: 8080
       nodePort: 30007
